[metadata]
name = pytappium-alex-gagnon
version = 0.0.1b1
author = Alex Gagnon
description = Python Appium test automation framework
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: Apache License 2.0
    Operating System :: Windows 10

[options]
packages = find:
python_requires = >=3.7
