[metadata]
name = pytappium-alex-gagnon
version = 0.0.1b1
author = Alex Gagnon
description = Python Appium test automation framework
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Development Status :: 3 - Alpha
    
    License :: OSI Approved :: Apache Software License 2.0 (Apache-2.0)

    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.7

[files]
extra_files =
    LICENSE
